# backtrace-android

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Roblox  build.gradle  gradle.properties  settings.gradle
backtrace-library/src/main/cpp/: CMakeLists.txt  backtrace-crashpad.cpp  backtrace-native.cpp  breadcrumbs.cpp  breadcrumbs.h  cacert.h  client-side-unwinding.cpp  client-side-unwinding.h  rotating-logger.h
backtrace-library/src/main/cpp/backends/: backend.cpp  breakpad-backend.cpp  crashpad-backend.cpp
backtrace-library/src/main/cpp/breakpad-builds-bak/arm64-v8a/: config.h
backtrace-library/src/main/cpp/breakpad-builds-bak/arm64-v8a/client/.deps/: minidump_file_writer.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/arm64-v8a/client/linux/handler/.deps/: backtrace_handler.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/arm64-v8a/client/linux/log/.deps/: log.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/arm64-v8a/client/linux/minidump_writer/.deps/: linux_core_dumper.Po  linux_ptrace_dumper.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/arm64-v8a/common/linux/.deps/: http_upload.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/: config.h
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/client/linux/dump_writer_common/.deps/: thread_info.Po  ucontext_reader.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/client/linux/handler/.deps/: backtrace_handler.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/client/linux/microdump_writer/.deps/: microdump_writer.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/client/linux/minidump_writer/.deps/: linux_dumper.Po  linux_ptrace_dumper.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/common/.deps/: string_conversion.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/common/android/include/sys/: user.h.old
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/common/android/testing/include/: wchar.h
backtrace-library/src/main/cpp/breakpad-builds-bak/armeabi-v7a/common/linux/.deps/: http_upload.Po  linux_libc_support.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/client/linux/crash_generation/.deps/: crash_generation_server.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/client/linux/dump_writer_common/.deps/: thread_info.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/client/linux/handler/: backtrace_handler.cc
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/client/linux/handler/.deps/: exception_handler.Po  minidump_descriptor.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/client/linux/log/.deps/: log.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/client/linux/minidump_writer/.deps/: linux_core_dumper.Po  minidump_writer.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/common/.deps/: md5.Po  string_conversion.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86/common/linux/.deps/: elf_core_dump.Po  elfutils.Po  guid_creator.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/client/.deps/: minidump_file_writer.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/client/linux/crash_generation/.deps/: crash_generation_client.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/client/linux/dump_writer_common/.deps/: thread_info.Po  ucontext_reader.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/client/linux/handler/.deps/: minidump_descriptor.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/common/.deps/: string_conversion.Po
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/common/android/include/: link.h
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/common/linux/: libcurl_wrapper.h
backtrace-library/src/main/cpp/breakpad-builds-bak/x86_64/common/linux/.deps/: elfutils.Po  guid_creator.Po  linux_libc_support.Po  memory_mapped_file.Po  safe_readlink.Po
backtrace-library/src/main/cpp/breakpad-builds/arm64-v8a/common/.deps/: md5.Po
backtrace-library/src/main/cpp/breakpad-builds/arm64-v8a/common/linux/: libcurl_wrapper.cc
backtrace-library/src/main/cpp/breakpad-builds/arm64-v8a/common/linux/.deps/: elf_core_dump.Po  file_id.Po  guid_creator.Po  memory_mapped_file.Po  safe_readlink.Po
backtrace-library/src/main/cpp/breakpad-builds/armeabi-v7a/client/.deps/: minidump_file_writer.Po
backtrace-library/src/main/cpp/breakpad-builds/armeabi-v7a/client/linux/log/.deps/: log.Po
backtrace-library/src/main/cpp/breakpad-builds/armeabi-v7a/common/.deps/: md5.Po
backtrace-library/src/main/cpp/breakpad-builds/armeabi-v7a/common/linux/.deps/: elf_core_dump.Po  elfutils.Po  file_id.Po  guid_creator.Po  libcurl_wrapper.Po  memory_mapped_file.Po  safe_readlink.Po
backtrace-library/src/main/cpp/breakpad-builds/headers/client/linux/handler/: exception_handler.cc
backtrace-library/src/main/cpp/breakpad-builds/headers/common/.deps/: string_conversion.Po
backtrace-library/src/main/cpp/breakpad-builds/headers/common/android/.deps/: breakpad_getcontext.Po
backtrace-library/src/main/cpp/breakpad-builds/headers/common/linux/.deps/: elfutils.Po  libcurl_wrapper.Po  linux_libc_support.Po
backtrace-library/src/main/cpp/breakpad-builds/x86/client/.deps/: minidump_file_writer.Po
backtrace-library/src/main/cpp/breakpad-builds/x86/common/.deps/: convert_UTF.Po
backtrace-library/src/main/cpp/breakpad-builds/x86/common/linux/.deps/: file_id.Po  http_upload.Po  libcurl_wrapper.Po  linux_libc_support.Po  memory_mapped_file.Po  safe_readlink.Po
backtrace-library/src/main/cpp/breakpad-builds/x86_64/common/.deps/: md5.Po
backtrace-library/src/main/cpp/breakpad-builds/x86_64/common/linux/.deps/: elf_core_dump.Po  libcurl_wrapper.Po
backtrace-library/src/main/cpp/build_args/: args_android.gn
backtrace-library/src/main/cpp/include/: backend.h  backtrace-native.h  breakpad-backend.h  client-side-unwinding.h  crashpad-backend.h
(+148 files in other folders)
